base/mesh/data-product-to-graphdb.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: data-product-to-graphdb
  namespace: wgu-demo
spec:
  targetRefs:
  - kind: Service
    group: ""
    name: graph-db-mock
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "*/ns/wgu-demo/sa/data-product-api"
